<resources>
    <string name="app_name">SafeParty</string>
    <string name="intro">Sei pronto a partecipare agli eventi in totale sicurezza? Entra in SafeParty!</string>
    <string name="intro2">SafeParty non rivelerà mai a nessuno il tuo status sanitario</string>
    <string name="start">INIZIA!</string>
    <string name="error_msg">Errore, non è stato possibile effettuare l\'accesso</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Naviga</string>
    <string name="navigation_profile">Profilo</string>
    <string name="service_status_activated">Servizio attivo</string>
    <string name="service_status_deactivated">Servizio non attivo</string>
    <string name="activate_button">Attiva</string>
    <string name="permission_denied">L\' app non può funzionare senza i permessi.\nCambia le impostazione per usare SafeParty.</string>
    <string name="permission_allowed">Permessi garantiti. Il servizio è avviato.</string>
    <string name="bluetooth_unavailable">Il Bluetooth non è disponibile, impossibile utilizzare l\'app.</string>
    <string name="bt_unavailable_title">Bluetooth non disponibile</string>
    <string name="bt_notification_title">Visibilità Bluetooth</string>
    <string name="bt_notification_text">Premi qui per essere visibile</string>
    <string name="partecipation_event_msg">Non ci sono eventi a cui parteciperai</string>
    <string name="contact_msg">Non ci sono contatti recenti registrati</string>
    <string name="input_name">Nome Evento</string>
    <string name="input_n_participate">Numero Partecipanti</string>
    <string name="input_description">Descrizione</string>
    <string name="input_location">Luogo</string>
    <string name="manage_event_msg">Non ci sono eventi gestiti</string>
    <string name="event_page_title">Aggiungi un nuovo evento</string>
    <string name="add_event_button">AGGIUNGI</string>
    <string name="cancel_event_form">ANNULLA</string>
    <string name="event_go_back_alert_title">TORNA ALLA HOME</string>
    <string name="event_go_back_alert_text">Sei sicuro di voler tornare indietro?\nNon saranno apportate modifiche.</string>
    <string name="go_back_alert">SÌ</string>
    <string name="stay_here_alert">ANNULLA</string>
    <string name="event_maneged_title">EVENTI GESTITI</string>
    <string name="event_participated_title">EVENTI A CUI PARTECIPERAI </string>
    <string name="recent_contact_title">CONTATTI RECENTI</string>
    <string name="private_event">Evento Privato</string>
    <string name="event_date">Data dell\'evento</string>
    <string name="required_status">Status richiesto</string>
    <string name="covid_negative">Negativo</string>
    <string name="covid_low_risk">Basso Rischio</string>
    <string name="covid_high_risk">Alto Rischio</string>
    <string name="covid_positive">Positivo</string>
    <string name="covid_vaccinated">Vaccinato</string>
    <string name="check_event_form">Controlla che i campi inseriti siano corretti</string>
    <string name="check_fields_title">ATTENZIONE</string>
    <string name="logout">Logout</string>
    <string name="understood_alert">HO CAPITO</string>
    <string name="save_status_changes">SALVA</string>
    <string name="status_change_page">Modifica il tuo Status</string>
    <string name="new_profile_status">Il tuo nuovo Status</string>
    <string name="distance">Distanza</string>
    <string name="status_changes_confirm">Modifica del tuo Status effettuata con successo!</string>
    <string name="general_connection_error">Il database è irraggiungibile</string>
    <string name="event_name_list">NOME EVENTO:</string>
    <string name="event_date_list">DATA:</string>
    <string name="event_city_list">CITTA\':</string>
    <string name="event_region_list">REGIONE:</string>
    <string name="event_country_list">NAZIONE:</string>
    <string name="user_status">STATUS ATTUALE</string>
    <string name="list_incoming_events">EVENTI IN PROGRAMMA</string>
    <string name="edit">Modifica</string>
    <string name="share">Condividi</string>
    <string name="loading_event_error">Impossibile caricare l\'evento</string>
    <string name="no_participate_event">Non hai alcun evento in programma:\nPartecipa selezionandone uno nella sezione "Naviga"!</string>
    <string name="event_request">Richieste di partecipazione</string>
    <string name="share_event_msg">Parteciperò a questo evento in totale sicurezza grazie a SafeParty, partecipa anche tu!</string>
    <string name="disclaimer_text">ATTENZIONE: Si prega di non selezionare uno status se non corrispondente alla realtà.\n\nI creatori di SafeParty non si ritengono in alcun modo responsabili di dichiarazioni di dati fasulle, anche perseguibili per legge. \nInoltre, si ricorda che è possibile incorrere in pesanti sanzioni in caso di dichiarazioni mendaci. </string>
    <string name="card_event_description">DESCRIZIONE</string>
    <string name="card_event_date_and_time">DATA E ORA</string>
    <string name="card_event_place">LUOGO</string>
    <string name="card_event_required_status">STATUS RICHIESTO</string>
    <string name="card_event_participant_details">DETTAGLI PARTECIPANTI</string>
    <string name="card_event_max_participants">LIMITE:</string>
    <string name="card_event_participants">CHI PARTECIPA?</string>
    <string name="expand">Espandi eventi gestiti </string>
    <string name="reduce">Clicca qui per ridurre</string>
    <string name="card_event_join">VUOI PARTECIPARE\nANCHE TU?</string>
    <string name="discover_on_day">Il giorno</string>
    <string name="discover_on_hour">alle ore </string>
    <string name="discover_place">in luogo</string>
    <string name="request_participation">ha richiesto di partecipare.</string>
    <string name="accept_request">ACCETTA</string>
    <string name="decline_request">RIFIUTA</string>
    <string name="rejected_status_toast">Status non accettato</string>
    <string name="event_full_toast">Evento pieno</string>
    <string name="sending_request_toast">Richiesta inoltrata correttamente</string>
    <string name="card_event_admin_details">DETTAGLI AMMINISTRATORI</string>
    <string name="new_admin_email">Inserire l\'email del nuovo Amministratore:</string>
    <string name="unregistered_email">Questa email non risulta registrata</string>
    <string name="already_admin">Questa email risulta già associata ad un Amministratore</string>
    <string name="admin_correctly_added">Amministratore aggiunto con successo!</string>
    <string name="request_already_sent">La tua richiesta di partecipazione all\'evento è stata già inviata</string>
    <string name="already_participant">Fai già parte di questo evento</string>
    <string name="event_request_list">Hanno richiesto di partecipare: </string>
    <string name="status_notification_title">Cambiamento Status</string>
    <string name="status_notification_text">Il tuo status sanitario è cambiato</string>
    <string name="event_notification_title">Richiesta di partecipazione</string>
    <string name="event_notification_text">Qualcuno vuole partecipare a un tuo evento!</string>
    <string name="status_change">Per aggiornare il tuo status sanitario,\npremi il pulsante di modifica sulla barra in alto</string>
</resources>