<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dip"
                android:layout_marginBottom="15dip"
                android:text="@string/event_page_title"
                android:textAlignment="center"
                android:textSize="25sp" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EventName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingTop="25dp"
                android:paddingBottom="20dp"
                android:hint="@string/input_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/participant_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/input_n_participate" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/participantNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/event_Description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/input_description" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/event_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_date"

                >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="#595858"
                android:paddingStart="20dp"
                android:paddingEnd="35dp"
                android:paddingTop="18dp"
                android:text="@string/required_status" />

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:backgroundTint="#595858"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="15dp"
                    android:text="@string/private_event" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/private_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dip"
                android:layout_marginRight="20dp"
                android:text="@string/input_location" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dip"
                android:layout_marginRight="20dp">

                <fragment
                    android:id="@+id/autocomplete_fragment"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <Button
                    android:id="@+id/cancelEventInfo"
                    android:layout_width="130dip"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:text="@string/cancel_event_form"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/addEvent"
                    android:layout_width="130dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:onClick="creaEvento"
                    android:paddingEnd="10dp"
                    android:text="@string/add_event_button" />



            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>