<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gingerbread.SafeParty.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_marginStart="155dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="156dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/introMessage"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/intro"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/introMessage2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/intro2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="144dp"
                android:layout_marginBottom="17dp"
                android:drawableLeft="@drawable/google_icon_131222"
                android:onClick="singInWithGoogle"
                android:text="@string/start"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>