<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gingerbread.SafeParty.ui.home.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:orientation="vertical"
            android:weightSum="1">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:title="@string/title_home" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:elevation="4dp"
                android:background="@color/primaryColor" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/cardBack">

                <TextView
                    android:id="@+id/servizio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/service_status_activated"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleIncoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/list_incoming_events" />
            <ProgressBar
                android:id="@+id/loading"
                android:elevation="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ListView
                android:id="@+id/event_inc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="50dp"
                android:divider="@android:color/transparent"
                android:animateLayoutChanges="true"
                android:background="@drawable/rounded_corner">

            </ListView>

        </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        app:pressedTranslationZ="14dp"
        android:layout_marginBottom="70dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>