<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        style="@style/customCardStyle"
        android:theme="@style/Theme.MaterialComponents.Light"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/discover_event_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:background="#81C784"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/discover_event_date_text"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.3"
                    android:text="@string/discover_on_day"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/discover_event_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/discover_event_hour_text"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.3"
                    android:text="@string/discover_on_hour"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/discover_event_hour"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp" />
            </LinearLayout>




            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/discover_event_place_text"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.3"
                    android:text="@string/discover_place"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/discover_event_place"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:textAlignment="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</LinearLayout>